--- a/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
@@ -19,7 +19,15 @@
       </button>
     </div>
     <div>
-      <button mat-raised-button color="accent" (click)="openSlabDetailsDialog()" class="icon-btn">
+      <button mat-raised-button color="primary" class="icon-btn" (click)="openDeleteSlabDialog()">
+        <mat-icon>
+          <span class="material-icons-outlined">        
+            file_download
+          </span>
+        </mat-icon> 
+        Export
+      </button>
+      <button mat-raised-button color="accent" (click)="openSlabDetailsDialog()" class="icon-btn ml-15">
         <mat-icon>add</mat-icon> Add Slab Details
       </button>
     </div>
