--- a/ClientApp/src/app/Forms/Master/sauda/sauda.component.html
+++ b/ClientApp/src/app/Forms/Master/sauda/sauda.component.html
@@ -1,6 +1,14 @@
 <div class="row">
   <div fxLayout="row" class="mt-2 flex-end">
-    <button mat-raised-button color="accent" (click)="openDialog(null)" class="icon-btn">
+    <button mat-raised-button color="primary" class="delete-slab icon-btn" (click)="openDeleteSlabDialog()">
+      <mat-icon>
+        <span class="material-icons-outlined">        
+          file_download
+        </span>
+      </mat-icon> 
+      Export
+    </button>
+    <button mat-raised-button color="accent" (click)="openDialog(null)" class="icon-btn ml-15">
       <mat-icon>add</mat-icon> Add Sauda
     </button>
   </div>
