--- a/ClientApp/src/app/theme/components/sidenav/sidenav.component.html
+++ b/ClientApp/src/app/theme/components/sidenav/sidenav.component.html
@@ -14,8 +14,8 @@
          [fxLayoutAlign]="(settings.menuType != 'default') ? 'center center' : 'space-around center'" class="user-info-wrapper">
         <img [src]="userImage" alt="user-image">
         <div class="user-info">
-            <p class="name">Emilio Verdines</p>
-            <p *ngIf="settings.menuType == 'default'" class="position">Web developer <br> <small class="muted-text">Member since May. 2016</small></p>
+            <p class="name">Web User</p>
+            <p *ngIf="settings.menuType == 'default'" class="position">Web developer <br> <small class="muted-text">User since May. 2023</small></p>
         </div>
     </div>
     <div *ngIf="settings.menuType != 'mini'" fxLayout="row" fxLayoutAlign="space-around center" class="w-100 muted-text">
