--- a/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-setup/brokerage-setup.component.html
@@ -48,7 +48,7 @@
 
       </div>
       <div>
-        <button mat-raised-button color="primary" class="delete-slab icon-btn" (click)="openDeleteSlabDialog()">
+        <button mat-raised-button color="primary" class="delete-slab icon-btn" >
           <mat-icon>
             <span class="material-icons-outlined">        
               file_download
