--- a/ClientApp/src/app/Forms/Master/item/item.component.html
+++ b/ClientApp/src/app/Forms/Master/item/item.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
   <div fxLayout="row" class="mt-2 flex-end">
-    <button mat-raised-button color="primary" class="delete-slab icon-btn" (click)="openDeleteSlabDialog()">
+    <button mat-raised-button color="primary" class="delete-slab icon-btn" >
       <mat-icon>
         <span class="material-icons-outlined">        
           file_download
