--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -357,6 +357,7 @@ input[type=number]:-moz-placeholder { /* Firefox 18- */
         }
     }
     .tab-party-details-parent, .tab-bank-details-parent {
+        width: 100%;
         margin: 0;
         flex-wrap: wrap;
         .mat-form-field:not(.mat-form-field-appearance-legacy) {
