--- a/ClientApp/src/app/Forms/Master/tax-master/tax-dialog/add-tax-master.component.html
+++ b/ClientApp/src/app/Forms/Master/tax-master/tax-dialog/add-tax-master.component.html
@@ -31,10 +31,12 @@
         </form>
     </mat-tab>
     <mat-tab label="Account Tax">
-        <!-- <form [formGroup]="taxForm" (ngSubmit)="onSubmit(taxForm.value)" fxLayout="row wrap" class="user-form">
+        <form [formGroup]="accountTaxForm" (ngSubmit)="onSubmit(accountTaxForm.value)" fxLayout="row wrap" class="user-form">
             <div class="tab-party-details-parent">
-                <div class="white-block pb-5"></div>
+                <div class="white-block">
+                    <h3><span>Account Tax</span></h3>
+                </div>
             </div>
-        </form> -->
+        </form>
     </mat-tab>
 </mat-tab-group>
