--- a/ClientApp/src/app/Forms/Master/branch/branch.component.html
+++ b/ClientApp/src/app/Forms/Master/branch/branch.component.html
@@ -1,1 +1,27 @@
-<p>branch works!</p>
+<div class="row">
+    <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2">
+      <div class="dropdown-container">
+        <div class="dropdown-wrapper">
+        </div>
+        </div>
+        <div>
+          <button mat-raised-button color="accent" (click)="openAccountDialog(null)" class="icon-btn ml-15">
+            <mat-icon>add</mat-icon> Add Brokerage
+          </button>
+        </div>
+      </div>
+      <div class="col-xl-12 mt-2">
+        <ag-grid-angular style=" height: 535px;"
+                         class="ag-theme-material"
+                         [rowData]="slabList"
+                         [pagination]="true"
+                         [rowHeight]="31"
+                         [columnDefs]="columnDefs"
+                         [defaultColDef]="agGridOptions.defaultColDef"
+                         (cellClicked)="onGridClick($event)"
+                         (gridReady)="onGridReady($event)"
+                          headerHeight="34">
+        </ag-grid-angular>
+      </div>
+    </div>  
+  
