--- a/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
+++ b/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
@@ -54,9 +54,14 @@
                      [pagination]="true"
                      [rowHeight]="31"
                      [columnDefs]="columnDefs"
+                      [rowSelection]="'multiple'"
+                     
+                      [rowMultiSelectWithClick]="true"
                      [defaultColDef]="agGridOptions.defaultColDef"
                      (cellClicked)="onGridClick($event)"
                      (gridReady)="onGridReady($event)"
+                     (selectionChanged)="checkSelectedRow($event)"
+
                       headerHeight="34">
     </ag-grid-angular>
   </div>
