Updated branch UI

--- a/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
+++ b/ClientApp/src/app/Forms/Master/brokerage-slab/brokerage-slab.component.html
@@ -14,7 +14,7 @@
       <button mat-raised-button color="accent" (click)="openAddSlabDialog()" class="icon-btn">
         <mat-icon>add_circle_outline</mat-icon> Add Slab
       </button>
-      <button mat-raised-button class="delete-slab icon-btn" (click)="openDeleteSlabDialog()">
+      <button mat-raised-button class="delete-btn icon-btn ml-15" (click)="openDeleteSlabDialog()">
         <mat-icon>delete_outline</mat-icon> Delete Slab
       </button>
     </div>
