--- a/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
+++ b/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
@@ -1,75 +1,70 @@
-
-<h2 class="heading">Branch</h2>
-<div>
-
-  <div class="two-forms-column">
+<h2 class="heading mb-10">Branch</h2>
+<mat-tab-group>
+  <mat-tab label="Branch">
     <form [formGroup]="branchForm" (ngSubmit)="onSubmit(branchForm.value)" fxLayout="row wrap" class="user-form">
-      <div class="white-block pb-5">
-        <h3><span>Branch</span></h3>
         <div class="tab-party-details-parent">
-          <div fxFlex="100">
-            <mat-form-field appearance="outline">
-              <mat-label>Name</mat-label>
-              <input matInput autocomplete="off" placeholder="item Name" formControlName="name" type="text">
-              <mat-error *ngIf="branchForm.controls.name.errors?.required">Branch Name is required</mat-error>
-            </mat-form-field>
-          </div>
-
+          <div class="white-block pb-5">
+            <h3><span>Branch</span></h3>
+            <div fxFlex="100">
+              <mat-form-field appearance="outline">
+                <mat-label>Name</mat-label>
+                <input matInput autocomplete="off" placeholder="item Name" formControlName="name" type="text">
+                <mat-error *ngIf="branchForm.controls.name.errors?.required">Branch Name is required</mat-error>
+              </mat-form-field>
+            </div>
+          </div>          
         </div>
         <div fxFlex="100" class="mt-2 text-center space-between-btns">
+          <button mat-raised-button color="warn" type="button" (click)="close()">Cancel</button>
           <button mat-raised-button color="primary" class="uppercase" [disabled]="!branchForm.valid" type="submit">Save</button>
         </div>
-      </div>
-
     </form>
-
-  </div>
-
-
-  <div class="col-xl-12 mt-2">
-
+  </mat-tab>
+  <mat-tab label="Account">
     <form [formGroup]="accountForm" (ngSubmit)="onAccountSubmit(accountForm.value)" fxLayout="row wrap" class="user-form">
-      <div class="white-block pb-5">
-        <h3><span>Account</span></h3>
-        <div class="tab-party-details-parent">
-          <div class="dropdown-wrapper">
-            <mat-form-field class="select-slab-mat" appearance="outline">
-              <mat-label>Select Account</mat-label>
-
-              <mat-select #selectAccount multiple formControlName="accountIds" placeholder="Select Account" panelClass="custom-select-panel">
-                <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)" />
-                <!-- <mat-option value=0 (click)="accountAllSelection()">Select All</mat-option> -->
-
-                <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
-                  {{ option.name }}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
+      <div class="tab-party-details-parent">
+        <div class="white-block pb-5">
+          <h3><span>Account</span></h3>
+          <div fxFlex="100">
+            <div class="dropdown-wrapper">
+              <mat-form-field class="select-slab-mat" appearance="outline">
+                <mat-label>Select Account</mat-label>
+                <mat-select #selectAccount multiple formControlName="accountIds" placeholder="Select Account" panelClass="custom-select-panel">
+                  <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)" />
+                  <!-- <mat-option value=0 (click)="accountAllSelection()">Select All</mat-option> -->
+                  <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
+                    {{ option.name }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
           </div>
-
         </div>
       </div>
-      <div fxFlex="100" class="mt-2 text-center space-between-btns">
+      <div fxFlex="100" class="mt-2 text-center space-between-btns mb-10">
+        <button mat-raised-button color="warn" (click)="close()">Cancel</button>  
         <button mat-raised-button color="primary" class="uppercase" [disabled]="!accountForm.valid" type="submit">Add Account</button>
-      </div>
+      </div>      
     </form>
-
-   
-    <ag-grid-angular style=" height: 535px;"
-                     class="ag-theme-material"
-                     [rowData]="branchIDAccountList"
-                     [pagination]="true"
-                     [rowHeight]="31"
-                     [columnDefs]="columnDefs"
-                     [rowSelection]="'multiple'"
-                     [rowMultiSelectWithClick]="true"
-                     [defaultColDef]="agGridOptions.defaultColDef"
-                     (cellClicked)="onGridClick($event)"
-                     (gridReady)="onGridReady($event)"
-                     (selectionChanged)="checkSelectedRow($event)"
-                     headerHeight="34">
-    </ag-grid-angular>
-  </div>
-</div>
-<button mat-raised-button color="warn" (click)="close()">Cancel</button>            
+    <div class="col-xl-12 mt-2 position-relative">
+      <span class="material-symbols-outlined delete-icon">
+        <mat-icon>delete_sweep</mat-icon>
+      </span>
+      <ag-grid-angular style=" height: 350px;"
+                    class="ag-theme-material mt-2"
+                    [rowData]="branchIDAccountList"
+                    [pagination]="true"
+                    [rowHeight]="31"
+                    [columnDefs]="columnDefs"
+                    [rowSelection]="'multiple'"
+                    [rowMultiSelectWithClick]="true"
+                    [defaultColDef]="agGridOptions.defaultColDef"
+                    (cellClicked)="onGridClick($event)"
+                    (gridReady)="onGridReady($event)"
+                    (selectionChanged)="checkSelectedRow($event)"
+                    headerHeight="34">
+      </ag-grid-angular>
+    </div>
+  </mat-tab>
+</mat-tab-group>        
 
