--- a/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.scss
+++ b/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.scss
@@ -1,10 +1,11 @@
-.white-block {
-    width: 100%;
+.position-relative {
+    position: relative;
 }
 
-.two-forms-column{
-    display: flex;
-}
-.milti-search-box{
-    padding: 5px;
+.delete-icon {
+    color: #dc3545;
+    position: absolute;
+    top: 7px;
+    right: 10px;
+    z-index: 1;
 }
