--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -56,8 +56,14 @@ body {
 .pb-5 {
     padding-bottom: 5px !important;
 }
+.pt-8 {
+    padding-top: 8px !important;
+}
 .pt-10 {
     padding-top: 10px;
+}
+.d-inline-block {
+    display: inline-block !important;
 }
 .align-center {
     align-items: center !important;
