--- a/ClientApp/src/app/Forms/Master/tax-master/tax-dialog/add-tax-master.component.html
+++ b/ClientApp/src/app/Forms/Master/tax-master/tax-dialog/add-tax-master.component.html
@@ -35,7 +35,7 @@
             <div class="tab-party-details-parent">
                 <div class="white-block pb-0">
                     <h3><span>Account Tax</span></h3>
-                    <div fxFlex="100" fxFlex.gt-sm="40" fxFlex.sm="40">
+                    <div fxFlex="100" fxFlex.gt-sm="33.33" fxFlex.sm="33.33">
                         <div class="dropdown-wrapper">
                             <mat-form-field class="select-slab-mat" appearance="outline">
                               <mat-label>Select Account</mat-label>
@@ -49,7 +49,7 @@
                             </mat-form-field>
                         </div>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="33" fxFlex.sm="33">
+                    <div fxFlex="100" fxFlex.gt-sm="33.33" fxFlex.sm="33.33">
                         <mat-form-field class="example-full-width" appearance="outline">
                             <mat-label>Tax</mat-label>
                             <mat-select placeholder="Select Tax" formControlName="taxId">
@@ -59,17 +59,21 @@
                             </mat-select>
                           </mat-form-field>
                     </div>
-                    <div fxFlex="100" fxFlex.gt-sm="24" fxFlex.sm="24" class="pt-8">
-                        <mat-radio-group formControlName="YesNo">
-                            <mat-radio-button value="Y" class="mx-1 pl-10" checked>Yes</mat-radio-button>
-                            <mat-radio-button value="N" class="ml-15">No</mat-radio-button>
-                        </mat-radio-group>
+                    <div fxFlex="100" fxFlex.gt-sm="33.33" fxFlex.sm="33.33">
+                        <mat-form-field class="example-full-width" appearance="outline">
+                            <mat-label>Account DDL</mat-label>
+                            <mat-select placeholder="Select account DDL" formControlName="accountDDL">
+                              <mat-option *ngFor="let DDL of accountDDLList" [value]="DDL.id">
+                                {{DDL.name}}
+                              </mat-option>
+                            </mat-select>
+                          </mat-form-field>
                     </div>
                 </div>
             </div>
             <div fxFlex="100" class="mt-2 text-center space-between-btns">
                 <button mat-raised-button color="warn" type="button" (click)="close()">Cancel</button>
-                <button mat-raised-button color="primary" class="uppercase" type="submit">Add Account</button>
+                <button mat-raised-button color="primary" class="uppercase" type="submit">Save</button>
             </div>
         </form>
         <div class="col-xl-12 mt-2 position-relative">
