--- a/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
+++ b/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
@@ -21,7 +21,8 @@
     </form>
   </mat-tab>
   <mat-tab label="Account">
-    <form [formGroup]="accountForm" (ngSubmit)="onAccountSubmit(accountForm.value)" fxLayout="row wrap" class="user-form">
+    <!--<form [formGroup]="accountForm" (ngSubmit)="onAccountSubmit(accountForm.value)" fxLayout="row wrap" class="user-form">
+
       <div class="tab-party-details-parent">
         <div class="white-block pb-0">
           <h3><span>Account</span></h3>
@@ -30,9 +31,9 @@
               <mat-form-field class="select-slab-mat" appearance="outline">
                 <mat-label>Select Account</mat-label>
                 <mat-select #selectAccount multiple formControlName="accountIds" placeholder="Select Account" panelClass="custom-select-panel">
-                  <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)" />
+                  <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)" />-->
                   <!-- <mat-option value=0 (click)="accountAllSelection()">Select All</mat-option> -->
-                  <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
+                  <!--<mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
                     {{ option.name }}
                   </mat-option>
                 </mat-select>
@@ -41,30 +42,55 @@
           </div>
         </div>
       </div>
+
       <div fxFlex="100" class="mt-2 text-center space-between-btns mb-10">
-        <button mat-raised-button color="warn" (click)="close()">Cancel</button>  
+        <button mat-raised-button color="warn" (click)="close()">Cancel</button>
         <button mat-raised-button color="primary" class="uppercase" [disabled]="!accountForm.valid" type="submit">Add Account</button>
-      </div>      
-    </form>
-    <div class="col-xl-12 mt-2 position-relative">
-      <span class="material-symbols-outlined delete-icon">
-        <mat-icon>delete_sweep</mat-icon>
-      </span>
-      <ag-grid-angular style=" height: 240px;"
-                    class="ag-theme-material mt-2"
-                    [rowData]="branchIDAccountList"
-                    [pagination]="true"
-                    [rowHeight]="31"
-                    [columnDefs]="columnDefs"
-                    [rowSelection]="'multiple'"
-                    [rowMultiSelectWithClick]="true"
-                    [defaultColDef]="agGridOptions.defaultColDef"
-                    (cellClicked)="onGridClick($event)"
-                    (gridReady)="onGridReady($event)"
-                    (selectionChanged)="checkSelectedRow($event)"
-                    headerHeight="34">
-      </ag-grid-angular>
+      </div>
+    </form>-->
+
+    <div class="row">
+
+      <div class="col-xl-6 mt-2 position-relative">
+        
+        <ag-grid-angular style=" height: 240px;"
+                         class="ag-theme-material mt-2"
+                         [rowData]="branchIDAccountList"
+                         [pagination]="true"
+                         [rowHeight]="31"
+                         [columnDefs]="columnDefs"
+                         [rowSelection]="'multiple'"
+                         [rowMultiSelectWithClick]="true"
+                         [defaultColDef]="agGridOptions.defaultColDef"
+                         (cellClicked)="onGridClick($event)"
+                         (gridReady)="onGridReady($event)"
+                         (selectionChanged)="checkSelectedRow($event)"
+                         headerHeight="34">
+        </ag-grid-angular>
+      </div>
+
+      <div class="col-xl-6 mt-2 position-relative">
+        <span class="material-symbols-outlined delete-icon">
+          <mat-icon>delete_sweep</mat-icon>
+        </span>
+        <ag-grid-angular style=" height: 240px;"
+                         class="ag-theme-material mt-2"
+                         [rowData]="branchIDAccountList"
+                         [pagination]="true"
+                         [rowHeight]="31"
+                         [columnDefs]="columnDefs"
+                         [rowSelection]="'multiple'"
+                         [rowMultiSelectWithClick]="true"
+                         [defaultColDef]="agGridOptions.defaultColDef"
+                         (cellClicked)="onGridClick($event)"
+                         (gridReady)="onGridReady($event)"
+                         (selectionChanged)="checkSelectedRow($event)"
+                         headerHeight="34">
+        </ag-grid-angular>
+      </div>
+
     </div>
+
   </mat-tab>
 </mat-tab-group>        
 
