--- a/ClientApp/src/app/Forms/Master/branch/branch.component.html
+++ b/ClientApp/src/app/Forms/Master/branch/branch.component.html
@@ -6,7 +6,7 @@
         </div>
         <div>
           <button mat-raised-button color="accent" (click)="openAccountDialog(null)" class="icon-btn ml-15">
-            <mat-icon>add</mat-icon> Add Brokerage
+            <mat-icon>add</mat-icon> Add Branch
           </button>
         </div>
       </div>
