--- a/ClientApp/src/app/Forms/Master/product/product-dialog/add-product.component.html
+++ b/ClientApp/src/app/Forms/Master/product/product-dialog/add-product.component.html
@@ -1,4 +1,9 @@
 <h2 class="heading mb-0">Add Product</h2>
+<a (click)="close()" class="close-btn">
+    <span class="material-symbols-outlined">
+      <mat-icon>close</mat-icon>
+    </span>
+</a>
 <form [formGroup]="productForm" (ngSubmit)="onSubmit(productForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
         <h3><span>Product</span></h3>
