--- a/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
+++ b/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
@@ -1,4 +1,9 @@
 <h2 class="heading mb-10">Branch</h2>
+<a (click)="close()" class="close-btn">
+  <span class="material-symbols-outlined">
+    <mat-icon>close</mat-icon>
+  </span>
+</a>
 <mat-tab-group>
   <mat-tab label="Branch">
     <form [formGroup]="branchForm" (ngSubmit)="onSubmit(branchForm.value)" fxLayout="row wrap" class="user-form">
