--- a/ClientApp/src/app/Forms/Master/contract-master/contract-master-dialog/add-contract-master.component.html
+++ b/ClientApp/src/app/Forms/Master/contract-master/contract-master-dialog/add-contract-master.component.html
@@ -1,4 +1,9 @@
 <h2 class="heading">Add Contract Master</h2>
+<a (click)="close()" class="close-btn">
+    <span class="material-symbols-outlined">
+      <mat-icon>close</mat-icon>
+    </span>
+</a>
 <form [formGroup]="contractForm" (ngSubmit)="onSubmit(contractForm.value)" fxLayout="row wrap" class="user-form">
     <div class="white-block pb-5">
         <h3><span>Contract Master</span></h3>
