--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -171,6 +171,20 @@ input[type=number]:-moz-placeholder { /* Firefox 18- */
         }
     }
 }
+.ag-row-odd {
+    background: #f3f3f3;
+}
+
+.ag-theme-material {
+    .ag-header-row {
+        background: rgb(0 105 92 / 81%);
+        color: #fff;
+    }
+}
+
+.ag-header-group-cell:not(.ag-column-resizing) + .ag-header-group-cell:not(.ag-column-hover):not(.ag-header-cell-moving):hover, .ag-header-group-cell:not(.ag-column-resizing) + .ag-header-group-cell:not(.ag-column-hover).ag-column-resizing, .ag-header-cell:not(.ag-column-resizing) + .ag-header-cell:not(.ag-column-hover):not(.ag-header-cell-moving):hover, .ag-header-cell:not(.ag-column-resizing) + .ag-header-cell:not(.ag-column-hover).ag-column-resizing, .ag-header-group-cell:first-of-type:not(.ag-header-cell-moving):hover, .ag-header-group-cell:first-of-type.ag-column-resizing, .ag-header-cell:not(.ag-column-hover):first-of-type:not(.ag-header-cell-moving):hover, .ag-header-cell:not(.ag-column-hover):first-of-type.ag-column-resizing {
+    background: rgb(0 105 92 / 81%);
+}
 
 .app {
   &.teal-light {
