--- a/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
+++ b/ClientApp/src/app/Forms/Master/branch/add-branch-account/add-branch-account.component.html
@@ -55,7 +55,7 @@
     </form>-->
 
 
-    <div class="row">
+    <div class="row branch-account">
       <div fxFlex="40">        
         <ag-grid-angular style=" height: 240px;"
                          class="ag-theme-material mt-2"
@@ -72,7 +72,7 @@
                          headerHeight="34">
         </ag-grid-angular>
       </div>
-      <div fxFlex="20" class="text-center">
+      <div fxFlex="15" class="text-center">
         <div class="pt-10 mb-10">
           <button mat-raised-button (click)="selectAccounts()" color="primary" type="button">
             <mat-icon>
@@ -90,7 +90,7 @@
           </mat-icon>
         </button>
       </div>
-      <div fxFlex="40">
+      <div fxFlex="45">
         <!--<span class="material-symbols-outlined delete-icon">
           <mat-icon>delete_sweep</mat-icon>
         </span>-->
