Added account head

--- a/ClientApp/src/app/Forms/Master/account-head/account-head.component.html
+++ b/ClientApp/src/app/Forms/Master/account-head/account-head.component.html
@@ -3,8 +3,8 @@
         <div class="dropdown-container">
             <div class="dropdown-wrapper"></div>
         </div>
-        <button mat-raised-button color="accent" (click)="openAccountDialog(null)" class="icon-btn ml-15">
-            <mat-icon>add</mat-icon> Add Acoount Head
+        <button mat-raised-button color="accent" (click)="openAccountHeadDialog(null)" class="icon-btn ml-15">
+            <mat-icon>add</mat-icon> Add Account Head
         </button>
     </div>
     <div class="col-xl-12 mt-2">
