Create account head

--- a/ClientApp/src/app/Forms/Master/account-head/add-account-head/add-account-head.component.html
+++ b/ClientApp/src/app/Forms/Master/account-head/add-account-head/add-account-head.component.html
@@ -13,7 +13,7 @@
           <div fxFlex="100">
             <mat-form-field appearance="outline">
               <mat-label>Account</mat-label>
-              <input matInput autocomplete="off" placeholder="item Name" formControlName="account" type="text">
+              <input matInput autocomplete="off" placeholder="Account" formControlName="account" type="text">
               <mat-error *ngIf="accountForm.controls.account.errors?.required">Account is required</mat-error>
             </mat-form-field>
           </div>
@@ -28,7 +28,7 @@
   <mat-tab label="Account Head">
     <div class="row account-head">
       <div fxFlex="40">        
-        <ag-grid-angular style=" height: 240px;"
+        <!-- <ag-grid-angular style=" height: 240px;"
                           class="ag-theme-material mt-2"
                           [rowData]="accountList"
                           [pagination]="true"
@@ -40,7 +40,7 @@
                           (gridReady)="onGridReadySelectAc($event)"
                           (selectionChanged)="checkSelectedRowSelectAc($event)"
                           headerHeight="34">
-        </ag-grid-angular>
+        </ag-grid-angular> -->
       </div>
       <div fxFlex="15" class="text-center">
         <div class="pt-10 mb-10">
@@ -61,7 +61,7 @@
         </button>
       </div>
       <div fxFlex="45">
-        <ag-grid-angular style=" height: 240px;"
+        <!-- <ag-grid-angular style=" height: 240px;"
                          class="ag-theme-material mt-2"
                          [rowData]="branchIDAccountList"
                          [pagination]="true"
@@ -73,7 +73,7 @@
                          (gridReady)="onGridReady($event)"
                          (selectionChanged)="checkSelectedRow($event)"
                          headerHeight="34">
-        </ag-grid-angular>
+        </ag-grid-angular> -->
       </div>
     </div>
   </mat-tab>
